--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,14 @@
     "bitset": "cpp",
     "set": "cpp",
     "queue": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "__functional_base": "cpp",
+    "istream": "cpp",
+    "locale": "cpp",
+    "memory": "cpp",
+    "thread": "cpp",
+    "tuple": "cpp",
+    "utility": "cpp"
   },
   "editor.formatOnSave": true,
   "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe"
