--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,6 @@
 .SUFFIXES:
 
-_: index.html assignments.html setup.html syllabus.html 2019-01-15.html 2019-01-17.html 2019-01-22.html 2019-01-24.html
+_: index.html assignments.html setup.html syllabus.html 2019-01-15.html 2019-01-17.html 2019-01-22.html 2019-01-24.html 2019-01-29.html
 
 %.html: %.md tufte.html5 $(STYLES)
 	pandoc \
